[package]
authors = ["Dylan Frankland <github@frankland.io>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the Proton C"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT"
name = "proton-c"
readme = "README.md"
repository = "https://github.com/dfrankland/proton-c"
documentation = "https://docs.rs/proton-c"
version = "0.1.0"
exclude = ["images/**/*"]

[dependencies]
embedded-hal = "0.2.3"
stm32f3xx-hal = { version = "0.2.0", features = ["rt", "stm32f303"] }

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rtfm = { version = "0.4.3", features = ["timer-queue"] }
cortex-m-semihosting = "0.3.3"
either = { version = "1.5.2", default-features = false }
panic-semihosting = "0.5.2"
# stm32-usbd = { version = "0.2.1", features = ["stm32f303xc"] }
stm32-usbd = { path = "../stm32-usbd", features = ["stm32f303xc"] }
usb-device = "0.2.1"

[dev-dependencies.stm32f3xx-hal]
version = "0.2.0"
features = ["rt", "stm32f303", "unproven"]
# git = "https://github.com/dfrankland/stm32f3xx-hal"
# branch = "master"

[features]
default = ["rt"]
rt = []

[profile]
[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
